--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express-jwt": "^6.0.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.4"
+    "moment": "^2.29.1",
+    "mongoose": "^5.11.4",
+    "nodemailer": "^6.4.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
